--- a/devices/走线.md
+++ b/devices/走线.md
@@ -17,7 +17,7 @@
   - 接地保证人的安全
     - 一些种类插头（欧标等）需要专门的转接适配器，请搜索其地线对应哪个
       - 不要使得地线没接好，然后火线零线又正常使得可以“勉强用”，这就危险了！
-      - 参考[[exception-warning]]
+      - 参考[[warning]]
 - 减少线数量，防止牵绊
   - 减少线的缠绕、打结、牵绊。每次关机时可以顺手检查整理
   - 重要通道不允许拉线，尤其不允许拉得太高，容易绊倒
