--- a/prob/math-stat/2-estimation/相合性.md
+++ b/prob/math-stat/2-estimation/相合性.md
@@ -1,14 +1,16 @@
-- 强相合性和（弱）相合性分别对应强大数律和弱大数律
-  - “大样本”性质！
-  - 强推出弱
-- 和大数律的不同：大数律是均值趋向于期望，而这里是估计参数值趋向于实际参数值
-- 和大数律的相同：收敛的“种类”相同（本质上，参数估计值$\hat \theta_n$是个随机变量，和大数律的$\bar X_n$类比）
-  - 弱：随机变量依概率收敛，即$\forall \epsilon >0,lim P(距离<\epsilon)=0$
-  - 强：$P(lim\hat \theta_n=\theta)=1$
-- 联系：当$\hat \theta$表达式就是均值，显然可以用大数律推出相合性
-  - 强大数律的结论下游比较强（根据极限的性质，可以“传递”一些强相合性）
-  - 例如$\hat \theta\to\theta$则$\hat \theta^{-1}\to\theta^{-1}$这种
-  - 又例如正态分布$\sigma$的MLE估计的相合性：注意除了$\bar X$满足大数律，$X^2$均值也满足，即可
+- 和[[prob/LLN]]的
+  - 不同：大数律是均值趋向于期望，而这里是估计参数值趋向于实际参数值
+  - 相同：收敛的“种类”相同（本质上，参数估计值$\hat \theta_n$是个随机变量，和大数律的$\bar X_n$类比）
+    - 弱：随机变量依概率收敛，即$\forall \epsilon >0,lim P(距离<\epsilon)=0$
+    - 强：$P(lim\hat \theta_n=\theta)=1$
+  - 联系：当$\hat \theta$表达式就是均值，显然可以用大数律推出相合性
+    - 强大数律的结论下游比较强（根据极限的性质，可以“传递”一些强相合性）
+    - 例如$\hat \theta\to\theta$则$\hat \theta^{-1}\to\theta^{-1}$这种
+    - 又例如正态分布$\sigma$的MLE估计的相合性：注意除了$\bar X$满足大数律，$X^2$均值也满足，即可
+  - 强相合性和（弱）相合性分别对应强大数律和弱大数律
+    - 强推出弱
+- “大样本”性质！
+  - 拓展：计算机人往往要实际计算，往往关注样本到了多少，则误差到了多少，等等
 - [[moment]]一般有强相合性
 - 一个[[mle]]强相合性的定理
   - 条件：参数不等则有非零测集概率不等。密度乘积关于$\theta$（单参数）单峰。
