--- a/prob/math-stat/2-estimation/优良标准.md
+++ b/prob/math-stat/2-estimation/优良标准.md
@@ -1,6 +1,5 @@
 优良标准有许多。
 有趣的例子：单参数（只有上界不知道）的均匀分布，[[mle]]显然导致总是偏小，[[moment]]可能给出明显不可能的结果（比如$0,0,0,0,0.8$）。这些都不令人满意
-- [[相合性]]当然是个好性质
 ## 无偏-有效性
 - $\phi$作为统计量，是随机变量
   - 回忆[[math-stat/1-introduction]]
@@ -18,13 +17,7 @@
 |$S^2$|0|$2\sigma^4/(n-1)$|$2\sigma^4/(n-1)$|
 |$\frac {n-1}n \cdot S^2$|$\sigma^2/n$|$2(n-1)\sigma^4/n^2$|$(2n-1)\sigma^4/n^2$|
 - 如何找一致最小方差无偏估计？[[找最佳]]
-## 置信区间
-- 置信水平：同样也是参数一律平等。要求参数落在两个统计量间概率一致地大于等于$\gamma$
-- 优良：定性标准：置信水平高，置信区间小（窄）
-  - 但宽度往往是随机变量，没法人为确定
-- 力求置信系数达到所要求置信水平（比较“紧”，不浪费！）
-  - 但很多时候做不到（比如课本上对伯努利分布证明了没法一直“紧”）
-  - 没法一致地紧，但可以有一个点“紧”。[[统计量方法]]至少保证一个点紧
-- 优良性传递
-  - [[相合性]]往往可传递，[[unbiased]]不行
-  - 置信区间可以（比如已知$\sigma^2$置信区间，求$\sigma$置信区间）
+## 其它
+- [[置信区间]]
+- [[相合性]]当然是个好性质
+- 渐近正态性：$\frac{\hat \theta_n-\theta} {se} \to N(0,1)$
