--- a/prob/math-stat/2-estimation/优良标准.md
+++ b/prob/math-stat/2-estimation/优良标准.md
@@ -18,6 +18,6 @@
 |$\frac {n-1}n \cdot S^2$|$\sigma^2/n$|$2(n-1)\sigma^4/n^2$|$(2n-1)\sigma^4/n^2$|
 - 如何找一致最小方差无偏估计？[[找最佳]]
 ## 其它
-- [[置信区间]]
+- [[confindence-interval]]
 - [[相合性]]当然是个好性质
-- 渐近正态性：$\frac{\hat \theta_n-\theta} {se} \to N(0,1)$
+- [[渐近正态性]]：$\frac{\hat \theta_n-\theta} {se} \to N(0,1)$
