--- a/prob/stochastic-processes/mcmc/细致平稳条件.md
+++ b/prob/stochastic-processes/mcmc/细致平稳条件.md
@@ -1,9 +1,4 @@
-- 前置[[markov-process]]
-- 定义：$P(X_{t+1}|\cdots, X_{t-1},X_t) = P(X_{t+1}|X_t)$
-- 一个具体实例所需要的：初始时分布和状态转移矩阵$P$
-  - 行向量（转移前分布）乘以矩阵等于行向量（转移后分布）
-  - 分布，自然加和为1
-- 一个应用：暂态、吸收态的求概率应用，参考[[5-markov-chain]]
+- 前置[[markov-chain]]
 - 满足一定条件时，转移矩阵$P$的$n$次幂到一定迭代次数后收敛不变
   - 且形如$$\left(\begin{matrix}\pi(1)&\pi(2)\\\pi(1)&\pi(2)\end{matrix}\right)$$
   - 其中$\sum \pi(i)=1$
