--- a/prob/all-of-stat/0.md
+++ b/prob/all-of-stat/0.md
@@ -13,4 +13,5 @@
   - 正逆过程
     - 正：概率，由机制生成数据，如[[introduction]]
     - 逆：`Data analysis, machine learning and data mining are various names given to the practice of statistical inference, depending on the context.`
+    - 所以本书也可以作为比较快速的概率入门
 - Statistics/Data Mining Dictionary对照表有点绝
