--- a/prob/math-stat/数理统计学讲义/2-estimation/枢轴量方法.md
+++ b/prob/math-stat/数理统计学讲义/2-estimation/枢轴量方法.md
@@ -16,7 +16,7 @@
     - 然而这回不顶用了。你枢轴量处于一个（包含0）的区间的概率较大，则解不出有意义的结果
     - 况且$\sum X_i$和估计量$S^2$也不沾关系！虽然[[2-estimation]]大原则说区间估计是得到两个估计量作为上限下线，不一定要和普通（非区间）估计扯上关系，但你不扯上总归不爽吧？
   - 所以应该考察$\frac{(n-1)S^2}{\sigma^2}=\sum (X_i-\bar X)^2/\sigma^2$满足$n-1$个自由度[[chi-square]]分布（回忆：[[chi-square]]作为特殊[[distribution/gamma]]，搞出区间都为正，可以得到有意义的$\sigma^2$区间）
-  - 应用：根据[[central-limit]]，可以用来构造其它分布的近似的置信区间。不过这时均值和方差可能都由一个参数决定（比如[[binom]]），那就不一定能解出上下限的显式解
+  - 应用：根据[[central-limit]]，可以用来构造其它分布的近似的置信区间。不过这时均值和方差可能都由一个参数决定（比如[[bernoulli-binom]]），那就不一定能解出上下限的显式解
 - 例：正态分布两个参数都不知道，则$\frac{\sqrt n (\bar X -\mu)}{S}$是枢轴量
   - 记忆：$\bar X-\mu$方差是$\sigma^2/n$量级，那么分母就用“估计量”$S/\sqrt n$
   - 其实也就是联系刚刚两个case（$\frac 1{\sigma/\sqrt n}(\bar X-\mu)\sim N(0,1)$和$(n-1)S^2/\sigma^2\sim \chi^2(n-1)$），开方和做比例把$\sigma$消掉，得到$\mu$的置信区间$\bar X\pm \lambda S/\sqrt n$
