--- a/prob/math-stat/数理统计学讲义/2-estimation/方差的无偏估计.md
+++ b/prob/math-stat/数理统计学讲义/2-estimation/方差的无偏估计.md
@@ -7,7 +7,7 @@ $X$方差存在，则$S^2:=\frac 1{n-1}\sum (X_i-\bar X)^2$是方差的无偏估
 应用
 - 结合[[找最佳]]中B-L-S定理，给出最优结果
 - 多一个“武器”（可能的线性组合用分量），用于组合出所需参数的无偏估计
-  - 比如[[binom]]的$\theta^2$的无偏估计，可以由……组合得
+  - 比如[[bernoulli-binom]]的$\theta^2$的无偏估计，可以由……组合得
   - 拓展：也可以把各阶矩期望当“武器”。注意这不是[[moment]]估计
     - 比如[[poisson]]一阶矩$\lambda$，二阶矩$\lambda^2+\lambda$，组合出$\lambda^2$
     - 两个东西，组合出对一个参数的估计，本质和[[moment]]估计完全不同
