--- a/prob/basics/distribution/可加性.md
+++ b/prob/basics/distribution/可加性.md
@@ -1,5 +1,8 @@
 独立，未必同分布，随机变量相加
-- [[normal]]：均值相加，方差相加
+- [[normal]]
+  - 均值相加，方差相加
+  - 比如$X,Y,Z$都是标准正态，$X,Y$无关，$Corr(X,Z)=0.3, Corr(Y,Z)=0.4$
+  - 则$Z=0.3X+0.4Y+\sqrt{0.75}U$，其中$U,X,Y$是i.i.d.
 - [[distribution/gamma]]：第一个参数相加，第二个参数须相同
   - [[chi-square]]（[[normal]]平方和）是特殊情况
 - [[poisson]]：$\lambda$相加
