--- a/prob/math-stat/数理统计学讲义/3-hypothesis/单参数.md
+++ b/prob/math-stat/数理统计学讲义/3-hypothesis/单参数.md
@@ -1,11 +1,11 @@
 比[[似然比]]稍广：单参数，取值范围为有限或无限区间
 - 单参数指数型
-相比[[exponential]]中增加条件：$e$指数上只有一项，且这项中的$Q(\theta)$关于$\theta$单增（当然其实单调即可，因为负号可以扔出$Q$表达式）。即$S(\theta)h(x)exp(Q(\theta)V(x))$
+相比[[exponential-family]]中增加条件：$e$指数上只有一项，且这项中的$Q(\theta)$关于$\theta$单增（当然其实单调即可，因为负号可以扔出$Q$表达式）。即$S(\theta)h(x)exp(Q(\theta)V(x))$
 这样的单调性使得$\{0,2\}$的检验也适用于$\{0,1\}$的检验。从而$H_0:\mu\le 0\leftrightarrow H_1:\mu >0$或$H_0:\mu= 0\leftrightarrow H_1:\mu >0$也适用
 - 直观：$\theta$大，$Q$大，有利于$V$大
 - 因此结论：$H_1$是$\theta>\theta_1$则$V$大于某个阈值作为否定域，根据N-P引理（[[似然比]]的[[UMP]]）得到这也是[[UMP]]
   - 阈值$C$选取：$\theta_1$下，检验水平足够（即$P(\sum V>C|\theta_1)=\alpha$）即可
-  - 回顾：$\sum V$是[[充分统计量]]
+  - 回顾：$\sum V$是[[sufficient-statistics]]
 - 这时是单侧（注意#单双侧 ）
 - 例如对于已知方差的[[normal]]，$V$是$X$，$\sum V$可以用[[可加性]]
 - 例如对于已知均值的[[normal]]，$V$是$(X-\mu)^2$，$\sum V/\sigma^2$满足[[chi-square]]
