--- a/prob/math-stat/数理统计学讲义/3-hypothesis/广义似然比.md
+++ b/prob/math-stat/数理统计学讲义/3-hypothesis/广义似然比.md
@@ -7,7 +7,7 @@
   - 这里的检验水平（临界值）对比[[p-value]]
   - 这个“一致”和[[UMP]]不是一个意思，那里针对功效，这里针对水平（参见[[水平和功效]]）
 
-与[[充分统计量]]关系：似然函数、广义似然比都是充分统计量的函数，因此否定域常常用[[充分统计量]]属于某集合表示（间接表示了$X_i$属于某集合）
+与[[sufficient-statistics]]关系：似然函数、广义似然比都是充分统计量的函数，因此否定域常常用[[sufficient-statistics]]属于某集合表示（间接表示了$X_i$属于某集合）
 举例：未知均值和方差的正态分布，$H_0:\mu=\mu_0$
 - 则求广义似然比就是求俩最值之比
   - 如果没限定$\mu$，那肯定令$\mu=\mu_0$，然后变$\sigma$找最值。如果限定了那就限定了呗。这两个最值很好找，似然比也很好找
