--- a/prob/math-stat/数理统计学讲义/2-estimation/完全统计量.md
+++ b/prob/math-stat/数理统计学讲义/2-estimation/完全统计量.md
@@ -2,4 +2,4 @@
   - 注意：并不是考察某一个$\theta$下$Eu=0$
 - 性质：$E_\theta u(\phi(X_i))=a$当然能推出……，换句话说$u(\phi)$期望和$\theta$无关即可几乎完全确定$u(\phi)$
 - 例子：0-1分布$n$个样本，则$Eu=\sum_k u(k)f(x,k)=0$，根据多项式至多$n$个根知$u(k)=0$
-- 判定：（记住）[[exponential]]，[[充分统计量]]，参数空间有内点
+- 判定：（记住）[[exponential-family]]，[[sufficient-statistics]]，参数空间有内点
