--- a/general-principles/化归.md
+++ b/general-principles/化归.md
@@ -6,6 +6,7 @@
   - 比如[[automation/trivial-mistakes]]需要“化归”一开始不同的环境。看起来多了一个操作，但之后更简单
   - 比如[[21-merge-two-sorted-lists]]增加链表头，方便处理空的[[algorithm/special-case]]
   - 比如利用对称性“交换”化归，例如[[235-lowest-common-ancestor-of-a-binary-search-tree]]
+  - [[adj-factor]]
 - 通过化归也可考察可计算性和计算复杂性
   - “拿$P=NP$压人”
     - [[2-eval]]提到的：如果没有过拟合，相当于$P=NP$就解决了。所以一定会存在过拟合现象
