--- a/finance/equity/停牌.md
+++ b/finance/equity/停牌.md
@@ -1,4 +1,4 @@
 - 有些$10\%$停牌，有些$5\%$停牌
 - 前一天收盘价为参考
-- 由于股价变动有最小单位，所以可能有取整问题，导致`return`不是精确的10或5个百分点
+- 由于股价变动有最小单位，所以可能有取整问题，导致[[returns]]不是精确的10或5个百分点
 - 如果开盘就到了停牌处，称为一字板
