--- a/prob/math-stat/数理统计学讲义/2-estimation/方差的无偏估计.md
+++ b/prob/math-stat/数理统计学讲义/2-estimation/方差的无偏估计.md
@@ -1,6 +1,6 @@
 $X$方差存在，则$S^2:=\frac 1{n-1}\sum (X_i-\bar X)^2$是方差的无偏估计（和具体分布，参数无关）
 证明
-- 首先回忆[[character/var]]传统艺能（应该熟得不能再熟）容易得到$ES^2 = \frac n{n-1}(EX_i^2-E\bar X^2)=\frac n{n-1}(VarX_i-Var\bar X)=\frac n{n-1}(1-\frac 1n)Var X_i=Var X_i$
+- 首先回忆[[variance]]传统艺能（应该熟得不能再熟）容易得到$ES^2 = \frac n{n-1}(EX_i^2-E\bar X^2)=\frac n{n-1}(VarX_i-Var\bar X)=\frac n{n-1}(1-\frac 1n)Var X_i=Var X_i$
 - 根据强大数律得强[[相合性]]
 
 
