--- a/prob/math-stat/数理统计学讲义/2-estimation/方差的无偏估计.md
+++ b/prob/math-stat/数理统计学讲义/2-estimation/方差的无偏估计.md
@@ -11,3 +11,4 @@ $X$方差存在，则$S^2:=\frac 1{n-1}\sum (X_i-\bar X)^2$是方差的无偏估
   - 拓展：也可以把各阶矩期望当“武器”。注意这不是[[moment]]估计
     - 比如[[poisson]]一阶矩$\lambda$，二阶矩$\lambda^2+\lambda$，组合出$\lambda^2$
     - 两个东西，组合出对一个参数的估计，本质和[[moment]]估计完全不同
+- [[standard-error]]估算，使得不需要做多次试验
