all of stats ch6

--- a/prob/math-stat/数理统计学讲义/2-estimation/优良标准.md
+++ b/prob/math-stat/数理统计学讲义/2-estimation/优良标准.md
@@ -2,22 +2,25 @@
 有趣的例子：单参数（只有上界不知道）的均匀分布，[[mle]]显然导致总是偏小，[[moment]]可能给出明显不可能的结果（比如$0,0,0,0,0.8$）。这些都不令人满意
 ## 无偏-有效性
 - $\phi$作为统计量，是随机变量
-  - 回忆[[math-stat/1-introduction]]
+  - 回忆[[数理统计学讲义/1-introduction]]
   - 其期望、方差等数字特征都和$\theta$相关，故有$E_\theta \phi$记号
   - 术语：可称$\hat \theta_n$为sampling distribution
 - 认为$\theta$之间没有高低贵贱之分，所有可能的$\theta$一律平等。
-  - 所以全部$\theta$都满足$E_\theta\phi=...$才叫无偏。全部$\theta$都方差不更大才“不次于”（如果还有一个$\theta_0$使得方差更小才“有效”）
+  - 所以全部$\theta$都满足$E_\theta\phi=...$才叫无偏。全部$\theta$都[[MSE]]不更大才“不次于”（如果还有一个$\theta_0$使得方差更小才“有效”）
   - （一致）最小方差无偏估计的一致也是这个意思
   - 更多无偏性相关参考[[unbiased]]
+  - 无偏时根据[[MSE#bias-variance tradeoff]]，“方差”就是均方误差[[MSE]]
+  - [[forall]]思想
 - 很多时候只能在无偏估计中考察最有效的。有偏的估计也考虑上？就不好讲了
-  - 有时有偏的均方误差更小。比如[[normal]]，[[方差的无偏估计]]$S^2$的均方误差比$S^2(1-1/n)$大。参考[[偏差-方差分解]]，计算参考[[normal]]的各阶矩爆算，或是背诵[[chi-square]]的方差
+  - 有时有偏的均方误差更小。比如[[normal]]，[[方差的无偏估计]]$S^2$的均方误差比$S^2(1-1/n)$大。参考[[MSE]]，计算参考[[normal]]的各阶矩爆算，或是背诵[[chi-square]]的方差
 
-|估计量|偏差|方差|均方误差|
+|估计量|偏差|方差（[[standard-error]]）|均方误差[[MSE]]|
 |-|-|-|-|
 |$S^2$|0|$2\sigma^4/(n-1)$|$2\sigma^4/(n-1)$|
 |$\frac {n-1}n \cdot S^2$|$\sigma^2/n$|$2(n-1)\sigma^4/n^2$|$(2n-1)\sigma^4/n^2$|
+- 上表用了[[MSE#bias-variance tradeoff]]
 - 如何找一致最小方差无偏估计？[[找最佳]]
 ## 其它
 - [[confindence-interval]]
 - [[相合性]]当然是个好性质
-- [[渐近正态性]]：$\frac{\hat \theta_n-\theta} {se} \to N(0,1)$
+- [[asymptotically-normal]]：$\frac{\hat \theta_n-\theta} {se} \to N(0,1)$
