--- a/prob/math-stat/数理统计学讲义/2-estimation/优良标准.md
+++ b/prob/math-stat/数理统计学讲义/2-estimation/优良标准.md
@@ -21,6 +21,6 @@
 - 上表用了[[MSE#bias-variance tradeoff]]
 - 如何找一致最小方差无偏估计？[[找最佳]]
 ## 其它
-- [[confindence-interval]]
+- [[confidence-interval]]
 - [[相合性]]当然是个好性质
 - [[asymptotically-normal]]：$\frac{\hat \theta_n-\theta} {se} \to N(0,1)$
