--- a/prob/math-stat/数理统计学讲义/2-estimation/统计量方法.md
+++ b/prob/math-stat/数理统计学讲义/2-estimation/统计量方法.md
@@ -5,7 +5,7 @@
   - $L(x_i)$关于$\phi(x_i)$显然单增
 - 证明大致思路：目前只考察好的，连续情形，且忽略边界的一点东西（严谨证明只是修修补补）
 $P_\theta(L(x_i)>g(\theta))=P_\theta(\theta\in \{\theta|g(\theta)<inf...\})$
-（特别注意，上面虽然写作$P_\theta(\theta\in ...)$，实际意义是$P_\theta(x_i满足\theta\in ...)$，参考[[区间估计的误区]]）
+（特别注意，上面虽然写作$P_\theta(\theta\in ...)$，实际意义是$P_\theta(x_i满足\theta\in ...)$，参考[[confidence-interval#interpretation]]）
 $\le P_\theta(\theta\in \{\theta|...>1-\gamma\})$（集合更大了）
 $=P_\theta(P_\theta(\phi(X_i)\ge \phi(x_i))>1-\gamma)=\gamma$
 - 另一侧是$sup\{g(\theta)|P_\theta(\phi(X_i)\le \phi(x_i))>1-\gamma\}$
