--- a/prob/math-stat/数理统计学讲义/3-hypothesis/水平和功效.md
+++ b/prob/math-stat/数理统计学讲义/3-hypothesis/水平和功效.md
@@ -22,7 +22,7 @@
     - 水平为极端情况0时，对应数理逻辑的[[可靠性]]（我说是定理，就是定理，类比：我说假设错误，就是假设错误）
     - 无法直接类比[[2-eval]]的precision
       - 因为我们现在是[[数理统计学讲义/1-introduction]]中的频率学派，无法计算“否定假设时，确实应该被否定的概率”
-      - 拓展：[[区间估计的误区]]
+      - 拓展：[[confidence-interval#interpretation]]
     - 极端情况：水平为0，所有实际上满足$H_0$的都不会被否定，相当于所有的负例都不会被判正，这时准确率precision为100%
 - 两者之间有[[tradeoff]]
   - 由两者，定义优良标准[[UMP]]
