--- a/prob/math-stat/数理统计学讲义/3-hypothesis/非参数检验.md
+++ b/prob/math-stat/数理统计学讲义/3-hypothesis/非参数检验.md
@@ -1,4 +1,4 @@
-参考[[parameter]]和[[拟合优度检验]]，考察“非参数”含义
+参考[[parametric]]和[[拟合优度检验]]，理解“非参数”含义
 - 计数统计量：看是否大于$\theta_0$. 可用于检验分位数。联系[[比率]]的检验
 实际常用的：$Y$（处理后）是否比$X$大，就是检验$Y-X$的$F(0)$是否为$1/2$
 - 秩统计量
