--- a/prob/math-stat/数理统计学讲义/2-estimation/枢轴量方法.md
+++ b/prob/math-stat/数理统计学讲义/2-estimation/枢轴量方法.md
@@ -9,7 +9,7 @@
 - 例：正态分布[[normal]]已知$\sigma$
   - 则$\frac{\sum X_i-n\mu}{\sqrt n \sigma}$是枢轴量，$\sim N(0,1)$
   - 枢轴量落在概率为0.95区间，即$[-1.96,1.96]$，那么置信区间就是$\bar X\pm 1.96\frac{\sigma}{\sqrt n}$
-  - 复习含义：任何$\mu$，不论大小，$\bar X\pm 1.96\sigma/\sqrt n$以0.95概率包含$\mu$（参见[[区间估计的误区]]）
+  - 复习含义：任何$\mu$，不论大小，$\bar X\pm 1.96\sigma/\sqrt n$以0.95概率包含$\mu$（参见[[confidence-interval#interpretation]]）
   - 特别注意 #单双侧 问题！此处两边各只剩下$0.025$，也就是要看标准[[normal]]的0.975[[character/quantile]]
 - 例：正态分布已知$\mu$或未知$\mu$（都行），估计$\sigma^2$（注：从而可估计$\sigma$）
   - 则$\frac{\sum X_i-n\mu}{\sqrt n \sigma}$仍是枢轴量，$\sim N(0,1)$
