all of stats ch7

--- a/prob/math-stat/数理统计学讲义/2-estimation/方差的无偏估计.md
+++ b/prob/math-stat/数理统计学讲义/2-estimation/方差的无偏估计.md
@@ -1,5 +1,6 @@
 - 前置[[variance]]
-- $X$方差存在，则$S^2:=\frac 1{n-1}\sum (X_i-\bar X)^2$是方差的无偏估计
+- $X$方差存在[[iid]]
+  - 则$S^2:=\frac 1{n-1}\sum (X_i-\bar X)^2$是方差的无偏估计
   - 和具体分布，参数无关
 - 证明
   - 首先回忆[[variance]]性质和常见操作（交叉项0）
@@ -13,3 +14,4 @@
       - 比如[[poisson]]一阶矩$\lambda$，二阶矩$\lambda^2+\lambda$，组合出$\lambda^2$
       - 两个东西，组合出对一个参数的估计，本质和[[moment]]估计完全不同
   - [[standard-error]]估算，使得不需要做多次试验
+    - 进而[[asymptotically-normal#normal-based interval]]等
