--- a/prob/math-stat/数理统计学讲义/3-hypothesis/拟合优度检验.md
+++ b/prob/math-stat/数理统计学讲义/3-hypothesis/拟合优度检验.md
@@ -1,4 +1,4 @@
-可以先[[分布函数估计]]，[[密度函数估计]]得到模型再检验
+可以先[[empirical-distribution-function]]，[[密度函数估计]]得到模型再检验
 ## 卡方（简单假设）
 假设成立时分布函数确定唯一：简单假设（否则复杂假设）
 先（不一定均匀）分成若干段（$m$个点，$m+1$段）
@@ -20,7 +20,7 @@ $V$计算公式：$\hat p$就是用频率计算概率$n_i/n$
 $V = n(\frac{a^2 bc+a^2bd+a^2 cd+a^2d^2+...}{...}-1)$
 $=(16项减16项，看多的少的就行)n(\frac{a^2d^2+b^2c^2-2adbc}{...})=n(ad-bc)^2/(+)(+)(+)(+)$
 ## 柯氏(Kolmogorov)
-回忆[[分布函数估计]]中G-C定理，“误差”上界不应太大
+回忆[[empirical-distribution-function]]中G-C定理，“误差”上界不应太大
 但是怎么由$\alpha$得否定域呢？分歧度$D$分布和$F$无关（这点类比[[order-statistics]]中连续的“好”分布和均匀分布的关系）！
 但$D$的分布和$n$有关。$n$小查表，大了则$\sqrt n D_n$分布近似是某个造好表的$Q$
 注意这里没有-1. -1的本质是[[chi-square]]那里由于正态分布被中心化，去除了一个自由度。这里和[[chi-square]]毫无关系，就是简单造个表，是$n$就是$n$
