--- a/prob/all-of-stat/0.md
+++ b/prob/all-of-stat/0.md
@@ -1,8 +1,10 @@
 - 基本信息
   - ![](cover.png)
   - ISBN: 978-0-387-21736-9
-- 非官方题解总结等[[github]]链接
+- 非官方总结，题解等[[github]]链接
   - https://github.com/telmo-correa/all-of-statistics
+  - https://github.com/aaidrici/AllOfStatistics
+    - 这里有题解，当然也有错误
 - Preface
     > Statistics, data mining, and machine learning are all concerned with collecting and analyzing data. For some time, statistics research was conducted in statistics departments while data mining and machine learning research was conducted in computer science departments. Statisticians thought that computer scientists were reinventing the wheel. Computer scientists thought that statistical theory didn’t apply to their problems.
     - 这一段附近统计和机器学习（CS）关系很值得关注
