--- a/prob/math-stat/查表.md
+++ b/prob/math-stat/查表.md
@@ -2,3 +2,9 @@
 - [[2-estimation]]例子：[[normal]]，[[t]]，[[chi-square]]等（后两者是两“族”，对于每个自然数有一个分布）
   - 区间估计时很好用
 - [[3-hypothesis]]中也有大量构造统计量，查表使用分位数（联系[[水平和功效]]中的水平）的例子
+# [[normal]]
+- 双侧正态分布表：这里“之外”都是双侧之外
+  - ![](normal.png)
+- 正负一个标准差内是$68.3\%$
+- 正负约两个（1.96）标准差内是$95\%$，[[p-value]], [[3-hypothesis]]常用
+- 正负三个标准差内是$99.7\%$，千分之三概率出去，实际中认为覆盖绝大部分数据
