--- a/algorithm/leetcode-solutions/679-24-game.md
+++ b/algorithm/leetcode-solutions/679-24-game.md
@@ -55,7 +55,7 @@ class Solution:
     - 在生成候选项`make_cands`时无需考虑
       - 比如一个普通的数，除以一个接近零的数，将导致特别大
       - 这大概率不会造成“错误地输出`True`”
-  - `0`的影响
+  - `0`的影响[[algorithm/trivial-mistakes#zero division]]
     - 除法时，除数不能为0
     - 正向，提出candidates时，可以`a*b=0`
     - 反向，由target和一个数a逆推出另一个数b时
