--- a/prob/basics/distribution/可加性.md
+++ b/prob/basics/distribution/可加性.md
@@ -1,10 +1,15 @@
-独立，未必同分布，随机变量相加
-- [[normal]]
-  - 均值相加，方差相加
-  - 比如$X,Y,Z$都是标准正态，$X,Y$无关，$Corr(X,Z)=0.3, Corr(Y,Z)=0.4$
-  - 则$Z=0.3X+0.4Y+\sqrt{0.75}U$，其中$U,X,Y$是i.i.d.
-- [[distribution/gamma]]：第一个参数相加，第二个参数须相同
-  - [[chi-square]]（[[normal]]平方和）是特殊情况
-- [[poisson]]：$\lambda$相加
-- [[bernoulli-binom]]：由伯努利加起来得的
-- 应用：算均值，算方差，甚至曲线救国计算。比如第一个参数为整数的[[distribution/gamma]]方差可以由[[chi-square]]这边化归到单个[[normal]]随机变量平方的方差的计算，化归到[[normal]]的各阶矩背诵
+- 独立，未必同分布，随机变量相加
+- 例子
+  - [[normal]]
+    - 均值相加，方差相加
+    - 比如$X,Y,Z$都是标准正态，$X,Y$无关，$Corr(X,Z)=0.3, Corr(Y,Z)=0.4$
+    - 则$Z=0.3X+0.4Y+\sqrt{0.75}U$，其中$U,X,Y$是i.i.d.
+  - [[distribution/gamma]]：第一个参数相加，第二个参数须相同
+    - [[chi-square]]（[[normal]]平方和）是特殊情况
+  - [[poisson]]：$\lambda$相加
+  - [[bernoulli-binom]]：由伯努利加起来得的
+  - 应用：算均值，算方差，甚至曲线救国计算。比如第一个参数为整数的[[distribution/gamma]]方差可以由[[chi-square]]这边化归到单个[[normal]]随机变量平方的方差的计算，化归到[[normal]]的各阶矩背诵
+- 理论
+  - [[moment-generating-functions]]
+  - [[characteristic-function]]
+  - 根据指数性质，可加性可以由函数的“可乘”性看出
