--- a/prob/math-stat/数理统计学讲义/2-estimation/密度函数估计.md
+++ b/prob/math-stat/数理统计学讲义/2-estimation/密度函数估计.md
@@ -1,7 +1,7 @@
 很多时候密度函数更好用（直观，或者涉及多维时）
 - 直方图法：频率/组距即$(b-a)$
   - 性质：样本充分大，组距足够小，误差上界任意小。（弱）[[相合性]]
-  - 证明：[[ineq]]中切比雪夫，然后[[MSE]]，两项都小
+  - 证明：[[inequalities]]中切比雪夫，然后[[MSE]]，两项都小
 - 核估计法
   - 例子：在$h$的范围内，正负$h$内都“等权重”算数，核就是$[-1,1)$上的$1/2$，其余0
   - 那不等权重咋办？变核。核积分还是1即可。近者可以权重更大
@@ -9,7 +9,7 @@
     - 本来是$\frac 1{nh}K_{-1到1内是1/2}(\frac{x-X_i}h)$
     - 反过来减，有[[卷积]]的意思在里面
     - 现在变成$\frac 1{nh}K_{一般}(\frac {x-X_i}h)$
-  - 性质：一定条件下弱、强[[相合性]]（不看证明了。其实也就是按部就班证均值证方差，[[ineq]]中切比雪夫，然后[[MSE]]. 总之弱相合性的证明也差不多这样）
+  - 性质：一定条件下弱、强[[相合性]]（不看证明了。其实也就是按部就班证均值证方差，[[inequalities]]中切比雪夫，然后[[MSE]]. 总之弱相合性的证明也差不多这样）
 - 最近邻估计
   - 这次是区间大小不固定，但要求总样本量固定（分子固定分母不固定）
   - 就是看最近的$K(n)$个。这点像是[[k-neighbor]]（不过也就这点像了hhh）
