--- a/matrix/广义逆.md
+++ b/matrix/广义逆.md
@@ -4,7 +4,7 @@
 
 性质
 - 一道题：我们知道[[multi-ary]]中提到$X'\alpha=X'X\beta$一定有解$\beta$，且$X\beta$是$\alpha$在$Im(X)$正交投影
-  - 所以参考[[exists]]的方法，有$\forall \alpha, \exists \beta, (X'X)(X'X)^-X'\alpha - X'\alpha=(X'X)(X'X)^-X'X\beta - X'X\beta=0$
+  - 所以参考[[naming#exists]]的方法，有$\forall \alpha, \exists \beta, (X'X)(X'X)^-X'\alpha - X'\alpha=(X'X)(X'X)^-X'X\beta - X'X\beta=0$
   - 于是$ (X'X)(X'X)^-X' = X'$
 - 齐次方程通解
   - 对于任意$y$，显然$A(I-A^-A)y=0$
