all of stats ch8

--- a/prob/math-stat/数理统计学讲义/2-estimation/统计量方法.md
+++ b/prob/math-stat/数理统计学讲义/2-estimation/统计量方法.md
@@ -18,4 +18,4 @@ $=P_\theta(P_\theta(\phi(X_i)\ge \phi(x_i))>1-\gamma)=\gamma$
 全1，就是$\phi(X)\ge \phi(x)=\sum 1=n$
 - 对于$[0,\theta]$均匀分布，考察统计量$maxX_i$，$sup(\theta|P_\theta(maxX\le max x)=(maxx/\theta)^n>\alpha)=maxx/\sqrt[n]{\alpha}$就是水平$\alpha$的置信上限
   - 对于本题，有个显然下限$maxx$
-  - 当然也可用[[枢轴量方法]]，即$P_\theta(maxx<a\theta)=...$，$maxx/\theta$分布函数**从而密度函数**和参数无关
+  - 当然也可用[[pivotal-interval]]，即$P_\theta(maxx<a\theta)=...$，$maxx/\theta$分布函数**从而密度函数**和参数无关
