all of stats ch9

--- a/prob/math-stat/数理统计学讲义/2-estimation/优良标准.md
+++ b/prob/math-stat/数理统计学讲义/2-estimation/优良标准.md
@@ -1,5 +1,5 @@
 优良标准有许多。
-有趣的例子：单参数（只有上界不知道）的均匀分布，[[mle]]显然导致总是偏小，[[moment]]可能给出明显不可能的结果（比如$0,0,0,0,0.8$）。这些都不令人满意
+有趣的例子：单参数（只有上界不知道）的均匀分布，[[maximum-likelihood]]显然导致总是偏小，[[moment]]可能给出明显不可能的结果（比如$0,0,0,0,0.8$）。这些都不令人满意
 ## 无偏-有效性
 - $\phi$作为统计量，是随机变量
   - 回忆[[数理统计学讲义/1-introduction]]
@@ -19,7 +19,7 @@
 |$S^2$|0|$2\sigma^4/(n-1)$|$2\sigma^4/(n-1)$|
 |$\frac {n-1}n \cdot S^2$|$\sigma^2/n$|$2(n-1)\sigma^4/n^2$|$(2n-1)\sigma^4/n^2$|
 - 上表用了[[MSE#bias-variance tradeoff]]
-- 如何找一致最小方差无偏估计？[[找最佳]]
+- 如何找一致最小方差无偏估计？[[optimal-estimator]]
 ## 其它
 - [[confidence-interval]]
 - [[相合性]]当然是个好性质
