--- a/prob/math-stat/数理统计学讲义/2-estimation/方差的无偏估计.md
+++ b/prob/math-stat/数理统计学讲义/2-estimation/方差的无偏估计.md
@@ -7,7 +7,7 @@
   - 容易得到$ES^2 = \frac n{n-1}(EX_i^2-E\bar X^2)=\frac n{n-1}(VarX_i-Var\bar X)=\frac n{n-1}(1-\frac 1n)Var X_i=Var X_i$
   - 根据强大数律得强[[相合性]]
 - 应用
-  - 结合[[找最佳]]中B-L-S定理，给出最优结果
+  - 结合[[optimal-estimator]]中B-L-S定理，给出最优结果
   - 多一个“武器”（可能的线性组合用分量），用于组合出所需参数的无偏估计
     - 比如[[bernoulli-binom]]的$\theta^2$的无偏估计，可以由……组合得
     - 拓展：也可以把各阶矩期望当“武器”。注意这不是[[moment]]估计
