--- a/prob/math-stat/数理统计学讲义/2-estimation/相合性.md
+++ b/prob/math-stat/数理统计学讲义/2-estimation/相合性.md
@@ -12,7 +12,7 @@
 - “大样本”性质！
   - 拓展：计算机人往往要实际计算，往往关注样本到了多少，则误差到了多少，等等
 - [[moment]]一般有强相合性
-- 一个[[mle]]强相合性的定理
+- 一个[[maximum-likelihood]]强相合性的定理
   - 条件：参数不等则有非零测集概率不等。密度乘积关于$\theta$（单参数）单峰。
   - 证明：
     - 由条件第一条和$lnx \le x-1$（此处达不到取等条件）得到$E_\theta ln\frac{f(\theta偏了一点)}{f(\theta)}dx<0$（严格不等号）
@@ -23,4 +23,4 @@
 ## 用[[borel-cantelli]]证明相合性
 其实强大数律用的也是[[borel-cantelli]]. 我们这里就是拆包装（参见[[leaky-abstraction]]）
 一般用法是证明$\forall \epsilon, P(距离_n\ge \epsilon)$（关于$n$）求和收敛（这时，如果不强相合，则存在概率大于0的事件，$\overline{lim} 距离_n>0$，矛盾）
-- 举例：均匀分布上下限的[[mle]]的强相合性。这里求和就是等比级数
+- 举例：均匀分布上下限的[[maximum-likelihood]]的强相合性。这里求和就是等比级数
