--- a/prob/math-stat/数理统计学讲义/3-hypothesis/拟合优度检验.md
+++ b/prob/math-stat/数理统计学讲义/3-hypothesis/拟合优度检验.md
@@ -10,7 +10,7 @@ $p_i$：简单假设下落在某段的概率
 [[查表]]，[[chi-square]]，如果$V$太大就拒绝
 举例：星期一到星期六，离散，很自然就是5个分点，$m=5,\chi_5^2$的0.95分位数为11.07，所以$V$是否大于$11.07$就是判断标准
 ## 卡方（复杂假设）
-（近似方法，不完全严谨）：[[mle]]变成简单假设，但自由度变成$m-k$
+（近似方法，不完全严谨）：[[maximum-likelihood]]变成简单假设，但自由度变成$m-k$
 - 应用：列联表的独立性检验
 对于$m*n$表，当成$m+n-2$参数的分布（注意少两个参数）
 自由度$mn-1-(m+n-2)=(m-1)(n-1)$
