--- a/prob/basics/distribution/可加性.md
+++ b/prob/basics/distribution/可加性.md
@@ -9,6 +9,7 @@
   - [[poisson]]：$\lambda$相加
   - [[bernoulli-binom]]：由伯努利加起来得的
   - 应用：算均值，算方差，甚至曲线救国计算。比如第一个参数为整数的[[distribution/gamma]]方差可以由[[chi-square]]这边化归到单个[[normal]]随机变量平方的方差的计算，化归到[[normal]]的各阶矩背诵
+  - 参考[[variance#可加性]]
 - 理论
   - [[moment-generating-functions]]
   - [[characteristic-function]]
