--- a/prob/math-stat/数理统计学讲义/3-hypothesis/拟合优度检验.md
+++ b/prob/math-stat/数理统计学讲义/3-hypothesis/拟合优度检验.md
@@ -7,7 +7,7 @@ $p_i$：简单假设下落在某段的概率
 两者差平方，除以$p_i$作某种正规化，就是个有意义的量
 因此$V:=\sum \frac{(\nu_i-np_i)^2}{np_i}$
 在$H_0$下，近似有$V\sim \chi^2_m$
-[[查表]]，[[chi-square]]，如果$V$太大就拒绝
+[[look-up]]，[[chi-square]]，如果$V$太大就拒绝
 举例：星期一到星期六，离散，很自然就是5个分点，$m=5,\chi_5^2$的0.95分位数为11.07，所以$V$是否大于$11.07$就是判断标准
 ## 卡方（复杂假设）
 （近似方法，不完全严谨）：[[maximum-likelihood]]变成简单假设，但自由度变成$m-k$
@@ -34,4 +34,4 @@ $=(16项减16项，看多的少的就行)n(\frac{a^2d^2+b^2c^2-2adbc}{...})=n(ad
   - 实质上是看$EX_{(i)}$和$X_{(i)}$（[[order-statistics]]）是否近似相等
   - 或说$X_{(i)}$和标准正态的分位数是否成线性关系，用[[系数]]$R^2$判断。这相当于做了中心化标准化
 - 大，D检验
-- 不过很多都是会[[查表]]就行
+- 不过很多都是会[[look-up]]就行
