--- a/prob/math-stat/数理统计学讲义/3-hypothesis/非参数检验.md
+++ b/prob/math-stat/数理统计学讲义/3-hypothesis/非参数检验.md
@@ -3,11 +3,11 @@
 实际常用的：$Y$（处理后）是否比$X$大，就是检验$Y-X$的$F(0)$是否为$1/2$
 - 秩统计量
 说白了就是排序第几。根据独立同分布假设，显然可证明某种均匀性
-比如检测$F(x)$还是$F(x-c)$，你把两总体共$m+n$个样本放到一起，看那$n$个样本的秩和，[[查表]]得结果
+比如检测$F(x)$还是$F(x-c)$，你把两总体共$m+n$个样本放到一起，看那$n$个样本的秩和，[[look-up]]得结果
 联系[[order-statistics]]，体会只和顺序有关，和具体值无关的思想
 - 符号秩统计量
 绝对秩：绝对值排序。关于0对称的连续分布的总体，
-符号秩和：$\sum \phi(Z_i)R_i^+$，$\phi$是分段函数（小0大1），$R^+$是绝对秩。可用于[[查表]]检验是否关于0对称
+符号秩和：$\sum \phi(Z_i)R_i^+$，$\phi$是分段函数（小0大1），$R^+$是绝对秩。可用于[[look-up]]检验是否关于0对称
 本质：**假设成立时怎么样**是很清楚的（水平可以控制），假设不成立时功效大（但具体功效有大有小我们控制不了）
 回忆[[UMP]]，我们老是考察零假设成立时某统计量的分位数（比如$T$，$F$，查[[t]]表，其实和本节很多都是类似的。只不过本节的表很多不如[[t]]用处广）
 
