--- a/prob/math-stat/数理统计学讲义/2-estimation/优良标准.md
+++ b/prob/math-stat/数理统计学讲义/2-estimation/优良标准.md
@@ -12,7 +12,7 @@
   - 无偏时根据[[MSE#bias-variance tradeoff]]，“方差”就是均方误差[[MSE]]
   - [[forall]]思想
 - 很多时候只能在无偏估计中考察最有效的。有偏的估计也考虑上？就不好讲了
-  - 有时有偏的均方误差更小。比如[[normal]]，[[方差的无偏估计]]$S^2$的均方误差比$S^2(1-1/n)$大。参考[[MSE]]，计算参考[[normal]]的各阶矩爆算，或是背诵[[chi-square]]的方差
+  - 有时有偏的均方误差更小。比如[[normal]]，[[variance#unbiased估计]]$S^2$的均方误差比$S^2(1-1/n)$大。参考[[MSE]]，计算参考[[normal]]的各阶矩爆算，或是背诵[[chi-square]]的方差
 
 |估计量|偏差|方差（[[standard-error]]）|均方误差[[MSE]]|
 |-|-|-|-|
