--- a/prob/math-stat/数理统计学讲义/2-estimation/相合性.md
+++ b/prob/math-stat/数理统计学讲义/2-estimation/相合性.md
@@ -1,4 +1,4 @@
-- 和[[prob/LLN]]的
+- 和[[LLN]]的
   - 不同：大数律是均值趋向于期望，而这里是估计参数值趋向于实际参数值
   - 相同：收敛的“种类”相同（本质上，参数估计值$\hat \theta_n$是个随机变量，和大数律的$\bar X_n$类比）
     - 弱：随机变量依概率收敛，即$\forall \epsilon >0,lim P(距离<\epsilon)=0$
