--- a/algorithm/打表.md
+++ b/algorithm/打表.md
@@ -1,9 +1,22 @@
 - 参考
   - [[tradeoff#时空tradeoff]]
   - [[hash]]，特别是[[hash#索引]]
-- 例：一天内的时分秒转化成0点到现在秒数，就挺适合打表
-  - 不就86400秒嘛
+- 例
+  - 心算、纸笔场景
+    - [[mental-math#背诵]]
+    - 笔算一百位数乘一百位数$x\cdot y$：可以打9个乘法结果的表，$x, 2x, 3x,\cdots$
+      - 九坤投资笔试就有过几十位数乘几十位数，纯考你耐心、细心、服从性
+    - 笔算一万位数乘一万位数：是不是可以考虑打99个乘法结果的表？
+      - 当然应该不至于有场景让你笔算一万位乘一万位
+  - 程序中
+    - 一天内的时分秒转化成0点到现在秒数，就挺适合打表
+      - 不就86400秒嘛
 - 表可以用脚本语言生成
   - [[code-data]]
   - [[naming#命名有时是相对的]]
   - [[meta-programming]]
+- 打表过程可能也比普通计算省时间
+  - 乘法比较麻烦，但依次计算$x, 2x, 3x$这样打表只需要加法
+  - 甚至[[dp]]过程自然产某种表
+    - [[shortest-path#floyd]]
+    - [[shortest-path#dijkstra]]
