--- a/general-principles/general-math/归一化.md
+++ b/general-principles/general-math/归一化.md
@@ -2,7 +2,7 @@
   - [[normalization]]
   - [[proportional]]
 - 除以归一化常数
-- [[gamma]], [[poisson]]等助记
+- [[gamma-distribution]], [[poisson]]等助记
 - [[expectation#归一化]]
   - [[power-rule#速算应用]]中很多物理题
   - 重心
