--- a/prob/math-stat/数理统计学讲义/3-hypothesis/广义似然比.md
+++ b/prob/math-stat/数理统计学讲义/3-hypothesis/广义似然比.md
@@ -13,8 +13,8 @@
   - 如果没限定$\mu$，那肯定令$\mu=\mu_0$，然后变$\sigma$找最值。如果限定了那就限定了呗。这两个最值很好找，似然比也很好找
   - 之后省略步骤
   - 注意：如果似然比可以写成某个统计量的增函数，那否定域当然可用这个统计量表示
-- 回忆[[t]]，定义$T=\frac{\sqrt n (\bar x-\mu_0)}{S}$，则否定域形如$|T|>C$. 根据检验水平定义，当$H_0$成立时应当只有$\alpha$概率否定，这样即可查表
-  - 查表依据：**零假设成立时**，满足[[t]]分布，回忆[[UMP]]
+- 回忆[[t-distribution]]，定义$T=\frac{\sqrt n (\bar x-\mu_0)}{S}$，则否定域形如$|T|>C$. 根据检验水平定义，当$H_0$成立时应当只有$\alpha$概率否定，这样即可查表
+  - 查表依据：**零假设成立时**，满足[[t-distribution]]分布，回忆[[UMP]]
 - 是[[UMP]]U
 
 类比拓展（也很多都可以证明是[[UMP]]U，但不一定，有时需要额外“边际产值相等”，会比较繁琐）
@@ -29,11 +29,11 @@
   - 要否定方差相同，那$F$就在两边
   - 要否定一侧，$F$就在一侧（在哪一侧很直观）
 - 已知方差相等考察均值：$T=\frac{\bar x-\bar y}{\sqrt{一堆}}\cdot\sqrt{一堆}$
-  - 怎么想到这个$T$？关键是**零假设成立时**，$\bar X-\bar Y\sim N(0,(n_1^{-1}+n_2^{-1})\cdot \sigma^2)$，$\sigma^{-2}(\sum (X_i-\bar X)^2+\sum(Y_i-\bar Y)^2)\sim \chi^2(n_1+n_2-1)$，那就有了[[t]]分布
+  - 怎么想到这个$T$？关键是**零假设成立时**，$\bar X-\bar Y\sim N(0,(n_1^{-1}+n_2^{-1})\cdot \sigma^2)$，$\sigma^{-2}(\sum (X_i-\bar X)^2+\sum(Y_i-\bar Y)^2)\sim \chi^2(n_1+n_2-1)$，那就有了[[t-distribution]]分布
 
 Behrens-Fisher问题：方差不等，检验均值
 - 直观：$\bar X-\bar Y$的均值……，方差……，故归一化后的……满足正态
-- 但这样归一化中包含参数，不是统计量。所以涉及的$\sigma$换成$S$，这样不再是正态，而是接近于某个自由度的[[t]]分布
+- 但这样归一化中包含参数，不是统计量。所以涉及的$\sigma$换成$S$，这样不再是正态，而是接近于某个自由度的[[t-distribution]]分布
   - 即：近似认为$T=\frac{\bar X - \bar Y}{\sqrt {S_1^2/{n_1}+S_2^2/n_2}}\sim (\frac {S^2_1}{n_1}+\frac {S^2_2}{n_2})^2/((\frac {S^2_1}{n_1})^2/(n_1-1)+(\frac {S^2_2}{n_2})^2/(n_2-1))个自由度t分布$
   - 特殊情况：$Y$为恒量，则$\sqrt {n_1} \bar X/S_1\sim t_{n_1-1}$
 - 比较这个统计量是否绝对值大/大/小，即可解决问题
