--- a/prob/math-stat/数理统计学讲义/3-hypothesis/似然比.md
+++ b/prob/math-stat/数理统计学讲义/3-hypothesis/似然比.md
@@ -1,5 +1,5 @@
 对于参数空间只有两个元素（当然不等）的检验问题，类似于[[knapspack]]问题，我们当然优先取“价格”（$L_2/L_1$）低的那些点进入
-即：接受域是“低价”的那部分，否定域是“高价”的那部分。具体部分多大？取决于多少“低价”部分达到[[水平和功效]]中“水平”（可靠性）的要求
+即：接受域是“低价”的那部分，否定域是“高价”的那部分。具体部分多大？取决于多少“低价”部分达到[[power-level]]中“水平”（可靠性）的要求
 当似然比分布函数连续时，当然可以找到“恰好装满背包”的，否则不一定（除非“随机化检验法”）
 例如泊松也是[[单参数]]里可以用的情况，但是因为是离散型，不能用随机化检验法可能造成麻烦
 性质
