--- a/prob/math-stat/数理统计学讲义/3-hypothesis/广义似然比.md
+++ b/prob/math-stat/数理统计学讲义/3-hypothesis/广义似然比.md
@@ -5,7 +5,7 @@
 - 同样也是找个阈值$\lambda_0$，不过这回的阈值相比[[似然比]]，是要求$\Theta_0$内一切$\theta$都能**一致**地足够可靠（检验水平$\alpha$足够小）
   - 虽然说一致，但是本节常见情况（检验某个参数是否大于/小于/等于某个值）只用考察一个点
   - 这里的检验水平（临界值）对比[[p-value]]
-  - 这个“一致”和[[UMP]]不是一个意思，那里针对功效，这里针对水平（参见[[水平和功效]]）
+  - 这个“一致”和[[UMP]]不是一个意思，那里针对功效，这里针对水平（参见[[power-level]]）
 
 与[[sufficient-statistics]]关系：似然函数、广义似然比都是充分统计量的函数，因此否定域常常用[[sufficient-statistics]]属于某集合表示（间接表示了$X_i$属于某集合）
 举例：未知均值和方差的正态分布，$H_0:\mu=\mu_0$
