--- a/physics/转动惯量.md
+++ b/physics/转动惯量.md
@@ -1,7 +1,7 @@
 - 大量联系数学的[[variance]], [[power-rule#速算应用]]
 - 例如[[uniform-distribution]]的[[variance]]
 # 平行轴定理
-- 参考[[MSE#bias-variance tradeoff]]
+- 参考[[orthogonal-decomposition#projection-to-a-hyperline]]
 - 算两样本（均值方差各自已知）合在一起的样本的方差
   - $n_1,\mu_1,\sigma_1$
   - $n_2,\mu_2,\sigma_2$
