all of stats ch.6

--- a/math-olympiad/elementary-number-theory/原根.md
+++ b/math-olympiad/elementary-number-theory/原根.md
@@ -1,1 +1,10 @@
 - 前置[[指数]]
+- 和[[指数]]一样要求$(a,m)=1$
+- 联想记忆
+    - 原批，抽卡保底
+    - 存在保底$a^{\phi(m)}\equiv 1$
+    - 且恰好保底才抽到
+- 结论
+  - 存在原根的剩余系有且仅有$1,2,4,p^\alpha,2p^\alpha$，其中$p$是奇素数
+- 例子
+  - 考察3, 5, 7之于8，则$3^2\equiv 5^2\equiv 7^2\equiv 1$，都是保底前抽到，不存在原根
