--- a/math-olympiad/elementary-number-theory/指数.md
+++ b/math-olympiad/elementary-number-theory/指数.md
@@ -1,3 +1,5 @@
+[toc]
+# 基础
 - 前置
   - [[euler-theorem]]
 - 前提：$(a,m)=1$，和[[euler-theorem]]要求一样
@@ -18,14 +20,22 @@
 # 应用
 - 多次应用[[整除性]][[同余]]关系，即$a\equiv  b(mod \quad n)\Leftrightarrow (b-a)|n$
 ## 求指数
-- 参考“举例”，一般是证明$n\in N$，且任何因数都$\notin N$
+- 法一：证明$n\in N$，且任何因数都$\notin N$
+  - $n=1$情况：[[指数#例3]]
+  - $n=p$（素数）情况：[[指数#例2]]
+  - $n=p^\alpha$情况：[[指数#例4]]
+- 法二：直接证明$n\in N$且$1,\cdots n-1\notin N$，参考[[指数#例1]]
 ## 举例
 - [[指数#2]]是证明[[整除性]]（从而证明[[同余]]）的方式
-    1. $\delta_{a^n-1}(a)=n,a^{\phi(a^n-1)}\equiv 1 (mod \quad a^n-1)\Rightarrow n|\phi(a^n-1)$
-    2. $p$为奇素数，$q$为$2^p-1$素因子
-    - $q\equiv 1(mod\quad 2p)\Leftarrow p|q-1$ [[reduction]]
-    - 注意$2^{q-1}\equiv 1(mod\quad q)$，$\delta_q(2)=p$即可
+### 例1
+- $\delta_{a^n-1}(a)=n,a^{\phi(a^n-1)}\equiv 1 (mod \quad a^n-1)\Rightarrow n|\phi(a^n-1)$
+### 例2
+- $p$为奇素数，$q$为$2^p-1$素因子
+- $q\equiv 1(mod\quad 2p)\Leftarrow p|q-1$ [[reduction]]
+- 注意$2^{q-1}\equiv 1(mod\quad q)$，$\delta_q(2)=p$即可
+### 例3
 - [[指数#2来源]]的应用
   - $n\ge 2, 2^n \equiv 1(mod \quad n)\Rightarrow 2^n\equiv 1(mod\quad q)$，其中$q$是素因子
   - $2^{q-1}\equiv 1(mod\quad q)$，则$\delta_q(2)|(n,q-1)$
   - [[naming#exists extreme value]]思想设$q$是最小素因子，则$\delta_q(2)|1,\delta_q(2)=1$
+### 例4
