--- a/prob/math-stat/数理统计学讲义/2-estimation/优良标准.md
+++ b/prob/math-stat/数理统计学讲义/2-estimation/优良标准.md
@@ -1,6 +1,7 @@
 优良标准有许多。
 有趣的例子：单参数（只有上界不知道）的均匀分布，[[maximum-likelihood]]显然导致总是偏小，[[moment]]可能给出明显不可能的结果（比如$0,0,0,0,0.8$）。这些都不令人满意
 ## 无偏-有效性
+- 前置[[unbiased]]
 - $\phi$作为统计量，是随机变量
   - 回忆[[数理统计学讲义/1-introduction]]
   - 其期望、方差等数字特征都和$\theta$相关，故有$E_\theta \phi$记号
