all of stats ch.10

--- a/prob/math-stat/数理统计学讲义/3-hypothesis/似然比.md
+++ b/prob/math-stat/数理统计学讲义/3-hypothesis/似然比.md
@@ -1,4 +1,5 @@
 - 对于参数空间只有两个元素（当然不等）的检验问题
+  - 是[[UMP]]
   - 参考
     - [[knapspack]]
     - [[budget-constraint]]
@@ -15,3 +16,7 @@
 - 当似然比分布函数连续时，当然可以找到“恰好装满背包”的，否则不一定
   - 除非“随机化检验法”
 - 例如[[poisson]]也是[[单参数]]里可以用的情况，但是因为是离散型，不能用随机化检验法可能造成麻烦
+# 拓展
+- [[单参数]]情形
+- 更加拓展，实用：[[广义似然比]]，先有结果，再有（可能的）最优性质
+  - todo 看到数理统计学讲义 132页了
