--- a/finance/equity/停牌.md
+++ b/finance/equity/停牌.md
@@ -1,7 +1,8 @@
 - 涨跌停
     - 有些$10\%$停牌，有些$5\%$停牌
     - 以前一天收盘价为参考
-    - 由于股价变动有最小单位，所以可能有取整问题，导致涨跌停当天[[returns]]不是精确的10或5个百分点
+    - 由于股价变动有[[tick-size]]，所以可能有取整问题，导致涨跌停当天[[returns]]不是精确的10或5个百分点
+      - [[discrete-continuous]]
     - 涨跌停的当天不能再次交易，第二天开盘后可以交易
     - 如果开盘就到了涨停价，称为一字涨停，一天都没法交易
 - 除此之外，还有例如公司重大事项公告、股东大会等原因可能导致停牌
