--- a/finance/equity/停牌.md
+++ b/finance/equity/停牌.md
@@ -8,3 +8,12 @@
 - 除此之外，还有例如公司重大事项公告、股东大会等原因可能导致停牌
     - 使得[[returns]]不但不是精确的10或5个百分点，而甚至是0
     - 这是[[general-principles/special-case]]
+# 导致数据处理问题
+- 还差1分钟涨停，这时的 forward 30min return大概率不会很大。但实际上应该是大的，也就是 fair price在涨停时大概率大于实际price
+- 处理方法
+  - 可以使用[[ffill-bfill]], bfill 价格，未来tradable的填进来
+  - 此时不完美：fair price 预测准，但你执行不了
+    - 但这是[[portfolio-optimization]] 和[[order-execution]]层面的事情，从预测层面分离出去问题当然对的, [[problem-decomposition]]
+- 错误方法
+  - 直接使用实际price [[returns]]: 严重有偏！不是fair price
+  - 直接[[dropna]]: 略去了很多有用信号
