--- a/deep-learning/architecture/ssm/s4.md
+++ b/deep-learning/architecture/ssm/s4.md
@@ -5,7 +5,13 @@
     - 主要是降低计算复杂度，实现本质上类似的模型
 # 预备
 - HiPPO
- [[ssm]]中的 $A$，避免 [[first-order-linear]] -> [[gradient-issue]]
+   - [[ssm]]中的 $A$指定一个值
+   - 避免 [[first-order-linear]] -> [[gradient-issue]]
+     - 随机训 $A$，几乎必定出问题。显然随机的话$A$几乎必然可对角化且特征值很多远离1的，那就不好了
+       - 由此一个简单想法：可否限制特征值模不能太远离1？
+       - 一种提议：对角阵，特征值模全为1，那就相当于input一维被拆成若干数（分量）之和，每个分量独立转圈（正余弦），显然不够合理
+       - 如果特征值模可能不为1，那就加上一些爆炸/消失
+       - 总之完全[[diagonalization]]，肯定不行
 - [[discrete-continuous]]
   - $\bar A = (I-\Delta A/2)^{-1}(I+\Delta A/2)$
   - 理解方式
@@ -28,6 +34,8 @@
   - 如果有[[real-symmetric#spectral-theorem]]就好了（$V$为[[unitary-matrix]]）
 # 核心算法
 - 三个要点
+- 该文不是严格 HiPPO，而是以其为基础进行[[parametric-inference]]参数化
+  - 参考[[hypothesis-space]]
 - [[complexity]]分析作为表，相比只会比点数的，确实质量高
   - 加粗表示理论最优
     - [[parallelism]]自然是 `Yes`最优，233
@@ -36,3 +44,10 @@
 - 高维？[[orthogonal-decomposition]]思想
   - 要么处理feature维（线性层，$H^2$）
   - 要么处理sequence length维（[[s4#核心算法]]层，$HN$）
+- 总体 $(B,L,H)$ seq2seq类似[[rnn]]等竞争对手
+- 核心部分线性
+  - 总体可以类比一种[[conv]]
+# 关于A的实验
+- 是否train：train则 [[hypothesis-space]]更大，training set 可很高，但泛化未必好
+- 在什么范围train（是否NPLR）
+- 初始化：HiPPO or not
