--- a/finance/equity/停牌.md
+++ b/finance/equity/停牌.md
@@ -1,5 +1,6 @@
 - 涨跌停
-    - 有些$10\%$停牌，有些$5\%$停牌
+    - 有些$10\%$停牌，有些$5\%$停牌，有些20，甚至有些新的没有限制
+      - 当然要仔细看规则。例如开盘集合竞价，即使没限制，你要是超过 $[0.8, 1.2]$倍范围也不给下
     - 以前一天收盘价为参考
     - 由于股价变动有[[tick-size]]，所以可能有取整问题，导致涨跌停当天[[returns]]不是精确的10或5个百分点
       - [[discrete-continuous]]
