--- a/finance/equity/停牌.md
+++ b/finance/equity/停牌.md
@@ -9,6 +9,8 @@
 - 除此之外，还有例如公司重大事项公告、股东大会等原因可能导致停牌
     - 使得[[returns]]不但不是精确的10或5个百分点，而甚至是0
     - 这是[[general-principles/special-case]]
+    - 性质：（2024）：2017以来，近期少很多
+    - 影响：导致分布中0的比例异常，影响[[normal]]性质的[[hypothesis-testing]]
 # 导致数据处理问题
 - 还差1分钟涨停，这时的 forward 30min return大概率不会很大。但实际上应该是大的，也就是 fair price在涨停时大概率大于实际price
 - 处理方法
